Refs #13719; fix alignment of tabs

--- a/trunk/ALiSS_agents/ALiSS/css/aliss.css
+++ b/trunk/ALiSS_agents/ALiSS/css/aliss.css
@@ -741,7 +741,6 @@ div.gsc-clear-button {
  */
 .gsc-tabsArea {
   clear: both;
-  margin-top: 6px;
   }
 
 .gsc-tabsArea .gs-spacer {
